8luhuiduchuangangqi/keil/.vscode/uv4.log
*** Using Compiler 'V6.22', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'MSPM03507'
Before Build - User command #1: cmd.exe /C "c:\Users\silly\Desktop\diansai\code\8luhuiduchuangangqi\keil\../Start/tools/keil/syscfg.bat 'c:\Users\silly\Desktop\diansai\code\8luhuiduchuangangqi\keil\' ncontroller.syscfg"
Using Sysconfig Tool from "D:\TI\sysconfig_1.19.0\sysconfig_cli.bat"
"Update the file located at <sdk path>/tools/keil/syscfg.bat to use a different version"
Running script...
Validating...
info: /ti/project_config/ProjectConfig deviceSpin: Note: User must select a device after migration. 
info: SPI_OLED(/ti/driverlib/SPI): Peripheral does not retain register contents in STOP or STANDBY modes. User should take care to save and restore register configuration in application. See Retention Configuration section for more details.
info: TIMER_0(/ti/driverlib/TIMER): Peripheral does not retain register contents in STOP or STANDBY modes. User should take care to save and restore register configuration in application. See Retention Configuration section for more details.
Generating Code (ncontroller.syscfg)...
Unchanged c:\Users\silly\Desktop\diansai\code\8luhuiduchuangangqi\ti_msp_dl_config.c...
Unchanged c:\Users\silly\Desktop\diansai\code\8luhuiduchuangangqi\ti_msp_dl_config.h...
Unchanged c:\Users\silly\Desktop\diansai\code\8luhuiduchuangangqi\Event.dot...
../hardware/grayscale/grayscale.c(9): error: use of undeclared identifier 'I2C_0_INST'
    9 |     DL_I2C_fillControllerTXFIFO(I2C_0_INST, temp, 2);
      |                                 ^
../hardware/grayscale/grayscale.c(10): error: use of undeclared identifier 'I2C_0_INST'
   10 |     while (!(DL_I2C_getControllerStatus(I2C_0_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
      |                                         ^
../hardware/grayscale/grayscale.c(12): error: use of undeclared identifier 'I2C_0_INST'
   12 |     DL_I2C_startControllerTransfer(I2C_0_INST, IR_I2C_ADDR, DL_I2C_CONTROLLER_DIRECTION_TX, 2);
      |                                    ^
../hardware/grayscale/grayscale.c(12): error: use of undeclared identifier 'IR_I2C_ADDR'
   12 |     DL_I2C_startControllerTransfer(I2C_0_INST, IR_I2C_ADDR, DL_I2C_CONTROLLER_DIRECTION_TX, 2);
      |                                                ^
../hardware/grayscale/grayscale.c(13): error: use of undeclared identifier 'I2C_0_INST'
   13 |     while (DL_I2C_getControllerStatus(I2C_0_INST) & DL_I2C_CONTROLLER_STATUS_BUSY_BUS);
      |                                       ^
../hardware/grayscale/grayscale.c(14): error: use of undeclared identifier 'I2C_0_INST'
   14 |     while (!(DL_I2C_getControllerStatus(I2C_0_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
      |                                         ^
../hardware/grayscale/grayscale.c(15): error: use of undeclared identifier 'I2C_0_INST'
   15 |     DL_I2C_flushControllerTXFIFO(I2C_0_INST);
      |                                  ^
../hardware/grayscale/grayscale.c(21): error: use of undeclared identifier 'I2C_0_INST'
   21 |     DL_I2C_fillControllerTXFIFO(I2C_0_INST, &addr, 1);
      |                                 ^
../hardware/grayscale/grayscale.c(23): error: use of undeclared identifier 'I2C_0_INST'
   23 |                 DL_I2C_disableInterrupt(I2C_0_INST, DL_I2C_INTERRUPT_CONTROLLER_TXFIFO_TRIGGER);
      |                                         ^
../hardware/grayscale/grayscale.c(25): error: use of undeclared identifier 'I2C_0_INST'
   25 |     while (!(DL_I2C_getControllerStatus(I2C_0_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
      |                                         ^
../hardware/grayscale/grayscale.c(26): error: use of undeclared identifier 'I2C_0_INST'
   26 |     DL_I2C_startControllerTransfer(I2C_0_INST, IR_I2C_ADDR, DL_I2C_CONTROLLER_DIRECTION_TX, 1);
      |                                    ^
../hardware/grayscale/grayscale.c(26): error: use of undeclared identifier 'IR_I2C_ADDR'
   26 |     DL_I2C_startControllerTransfer(I2C_0_INST, IR_I2C_ADDR, DL_I2C_CONTROLLER_DIRECTION_TX, 1);
      |                                                ^
../hardware/grayscale/grayscale.c(27): error: use of undeclared identifier 'I2C_0_INST'
   27 |     while (DL_I2C_getControllerStatus(I2C_0_INST) & DL_I2C_CONTROLLER_STATUS_BUSY_BUS);
      |                                       ^
../hardware/grayscale/grayscale.c(28): error: use of undeclared identifier 'I2C_0_INST'
   28 |     while (!(DL_I2C_getControllerStatus(I2C_0_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
      |                                         ^
../hardware/grayscale/grayscale.c(31): error: use of undeclared identifier 'I2C_0_INST'
   31 |     DL_I2C_startControllerTransfer(I2C_0_INST, IR_I2C_ADDR, DL_I2C_CONTROLLER_DIRECTION_RX, 1);
      |                                    ^
../hardware/grayscale/grayscale.c(31): error: use of undeclared identifier 'IR_I2C_ADDR'
   31 |     DL_I2C_startControllerTransfer(I2C_0_INST, IR_I2C_ADDR, DL_I2C_CONTROLLER_DIRECTION_RX, 1);
      |                                                ^
../hardware/grayscale/grayscale.c(32): error: use of undeclared identifier 'I2C_0_INST'
   32 |     while (DL_I2C_getControllerStatus(I2C_0_INST) & DL_I2C_CONTROLLER_STATUS_BUSY_BUS);
      |                                       ^
../hardware/grayscale/grayscale.c(33): error: use of undeclared identifier 'I2C_0_INST'
   33 |     while (!(DL_I2C_getControllerStatus(I2C_0_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
      |                                         ^
../hardware/grayscale/grayscale.c(34): error: use of undeclared identifier 'I2C_0_INST'
   34 |     data = DL_I2C_receiveControllerData(I2C_0_INST);
      |                                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
compiling grayscale.c...
".\Objects\ncontroller.axf" - 19 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
